--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,12 +27,12 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/museo
+spring.datasource.url=jdbc:postgresql://localhost/museo
 spring.datasource.username=postgres
-spring.datasource.password=adminadmin
+spring.datasource.password=Stormytommy-95
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #
 #==================================
